--- a/style.css
+++ b/style.css
@@ -8,17 +8,26 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-	font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+.toggle-modal-button {
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.form-label {
+  margin-bottom: 0.25rem;
 }
 
 footer a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 footer a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
