--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.books-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  gap: 1rem;
+}
+
 .toggle-modal-button {
   bottom: 1rem;
   right: 1rem;
